--- a/tox.ini
+++ b/tox.ini
@@ -30,14 +30,14 @@ description = Checks if imports are in the correct order and correctly formatted
 basepython = python3.11
 changedir = {toxinidir}
 deps = isort
-commands = isort --check-only --diff anfema_django_testutils
+commands = isort --check-only anfema_django_testutils tests
 
 [testenv:black]
 description = Checks if the code is formatted according to Black coding standards.
 basepython = python3.11
 changedir = {toxinidir}
 deps = black
-commands = black --check {toxinidir}
+commands = black --check anfema_django_testutils tests
 
 [testenv:docs]
 description = Builds the package documentation into the given directory.
