Add test environment (#23)
Add test environments to tox

Closes #22

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,19 @@
+# IDE
 .idea/
-.tox/
-.venv/
-*.egg-info
-venv/
+
+# Distribution / packaging
+dist/
+*.egg-info/
+
+# Sphinx documentation
 docs/build/
 
-*.pyc
+# pyenv
+.python-version
+
+# Byte-compiled
 __pycache__/
+*.py*.py[cod]
+
+# Unit test / coverage reports
+.tox/
