--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,48 @@
 [tox]
+minversion = 3.18
+envlist =
+    py{39,310}-django32
+    py{39,310,311}-django{41,42}
+    flake8
+    isort
+    black
 
 [testenv]
+deps =
+    .[tests]
+    django32: Django~=3.2.0
+    django41: Django~=4.1.0
+    django42: Django~=4.2.0
+setenv =
+    PYTHONPATH = {toxinidir}
+commands =
+    python -m unittest discover -s "{toxinidir}/tests"
+
+[testenv:flake8]
+description = Checks the code for compliance with Flake8 coding standards.
+basepython = python3.11
+changedir = {toxinidir}
+deps = flake8-pyproject
+commands = flake8 anfema_django_testutils tests
+
+[testenv:isort]
+description = Checks if imports are in the correct order and correctly formatted.
+basepython = python3.11
+changedir = {toxinidir}
+deps = isort
+commands = isort --check-only anfema_django_testutils tests
+
+[testenv:black]
+description = Checks if the code is formatted according to Black coding standards.
+basepython = python3.11
+changedir = {toxinidir}
+deps = black
+commands = black --check anfema_django_testutils tests
 
 [testenv:docs]
 description = Builds the package documentation into the given directory.
-usedevelop = true
+basepython = python3.11
+changedir = {toxinidir}
+skip_install = true
 deps = .[docs]
-commands =
-    sphinx-build docs/source {posargs}
+commands = sphinx-build -n -a -E docs/source {posargs:docs/build}
