--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ minversion = 3.18
 envlist =
     py{39,310}-django32
     py{39,310,311}-django{41,42}
+    system-tests
     flake
     isort
     black
@@ -13,10 +14,17 @@ deps =
     django32: Django~=3.2.0
     django41: Django~=4.1.0
     django42: Django~=4.2.0
-setenv =
-    PYTHONPATH = {toxinidir}
+changedir = {toxinidir}/tests
 commands =
-    python -m unittest discover -s "{toxinidir}/tests"
+    coverage erase
+    coverage run --data-file={envdir}/.coverage --include="*/anfema_django_testutils/*" manage.py test
+    coverage html --data-file={envdir}/.coverage -d {envdir}/coverage-report --title={envname} --skip-empty
+
+[testenv:system-tests]
+description = Runs the system tests
+basepython = python3.11
+changedir = {toxinidir}/tests
+commands = python -m unittest system_tests/system_tests.py
 
 [testenv:flake]
 description = Checks the code for compliance with Flake8 coding standards.
@@ -51,4 +59,4 @@ commands = sphinx-build -n -a -E docs/source {posargs:docs/build}
 python =
     3.9: py39
     3.10: py310
-    3.11: py311, flake, black, isort
+    3.11: py311, flake, black, isort, system-tests
