--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,5 +69,5 @@ known_django = "django"
 sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
 lines_after_imports = 2
 
-[tool.flake8]
-max-line-length = 120
+[tool.flakeheaven]
+max_line_length = 120
