--- a/tox.ini
+++ b/tox.ini
@@ -46,3 +46,9 @@ changedir = {toxinidir}
 skip_install = true
 deps = .[docs]
 commands = sphinx-build -n -a -E docs/source {posargs:docs/build}
+
+[gh-actions]
+python =
+    3.9: py39
+    3.10: py310
+    3.11: py311, flake, isort, black
