--- a/.github/workflows/coding-style-checks.yaml
+++ b/.github/workflows/coding-style-checks.yaml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   tox:
-    name: Test with tox
+    name: Coding Style Checks
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -22,4 +22,5 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install tox tox-gh-actions
     - name: Test with tox
-      run: tox -e flake,isort,black
+      run: tox run-parallel -e flake,isort,black
+
