--- a/.github/workflows/unittests.yaml
+++ b/.github/workflows/unittests.yaml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   tox:
-    name: Test with tox
+    name: Unittests
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -22,4 +22,4 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install tox tox-gh-actions
     - name: Test with tox
-      run: tox
+      run: tox run-parallel --skip-env='^(flake|black|isort)$'
