Do not show the spinner
Closes #24

--- a/.github/workflows/coding-style-checks.yaml
+++ b/.github/workflows/coding-style-checks.yaml
@@ -22,5 +22,5 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install tox tox-gh-actions
     - name: Test with tox
-      run: tox run-parallel -e flake,isort,black
+      run: tox run-parallel -e flake,isort,black --parallel-no-spinner
 
