--- a/.github/workflows/unittests.yaml
+++ b/.github/workflows/unittests.yaml
@@ -22,4 +22,4 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install tox tox-gh-actions
     - name: Test with tox
-      run: tox run-parallel --skip-env='^(flake|black|isort)$'
+      run: tox run-parallel --skip-env='^(flake|black|isort)$' --parallel-no-spinner
