--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ minversion = 3.18
 envlist =
     py{39,310}-django32
     py{39,310,311}-django{41,42}
-    flake8
+    flake
     isort
     black
 
@@ -18,12 +18,12 @@ setenv =
 commands =
     python -m unittest discover -s "{toxinidir}/tests"
 
-[testenv:flake8]
+[testenv:flake]
 description = Checks the code for compliance with Flake8 coding standards.
 basepython = python3.11
 changedir = {toxinidir}
-deps = flake8-pyproject
-commands = flake8 anfema_django_testutils tests
+deps = flakeheaven
+commands = flakeheaven lint anfema_django_testutils tests
 
 [testenv:isort]
 description = Checks if imports are in the correct order and correctly formatted.
@@ -46,3 +46,9 @@ changedir = {toxinidir}
 skip_install = true
 deps = .[docs]
 commands = sphinx-build -n -a -E docs/source {posargs:docs/build}
+
+[gh-actions]
+python =
+    3.9: py39
+    3.10: py310
+    3.11: py311, flake, black, isort
